--- a/package.json
+++ b/package.json
@@ -11,5 +11,15 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "aws-sdk": "^2.1562.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.3",
+    "redis": "^4.6.13",
+    "simple-git": "^3.22.0"
+  }
 }
