--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node build/api.js",
+    "dev": "nodemon src/api.ts",
+    "build": "tsc -p ."
   },
   "keywords": [],
   "author": "",
