--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.521.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "aws-sdk": "^2.1562.0",
