--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "dotenv": "^16.4.5",
     "simple-git": "^3.22.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
