UI added and env

--- a/Request-Handler-Service/package.json
+++ b/Request-Handler-Service/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/node-fetch": "^2.6.11",
     "@types/typescript": "^2.0.0",
+    "dotenv": "^16.4.5",
     "node-fetch": "^3.3.2",
     "typescript": "^5.4.2"
   }
